--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-indiana-drag-scroll": "^1.5.5",
+    "react-jss": "^10.0.4",
     "react-scripts": "3.3.1"
   },
   "scripts": {
